--- a/views/about.html
+++ b/views/about.html
@@ -1,5 +1,22 @@
 {% extends "layout.html" %}
 
 {% block mainContent %}
-  <p>This is the about us page</p>
+  <p>Meet our team:</p>
+    <p style="float: left; font-size: 9pt; text-align: center; width: 23%; margin-right: 1%; margin-bottom: 0.5em;">
+          <img id=gentle-manatee-headshot src=https://lh3.googleusercontent.com/i1vx1Par2co41EHPwfE53P4cFvQfa0bXQSv46ZFXXfkKsGRv8zSf8YH82u4KyKt-726d-v30i-Fwac0=w1920-h886-rw style="width: 100%">
+          <span id=gentle-manatee-name> Mehmet "Gentle Manatee" M. </span>
+    </p>
+    <p style="float: left; font-size: 9pt; text-align: center; width: 23%; margin-right: 1%; margin-bottom: 0.5em;">
+          <img id=famous-pigeon-headshot src=https://lh6.googleusercontent.com/WKgXD0Tbx5X3PLehsDD-5wg3sNdXt3rq9qz-Nee7Uxsnz2chAqDZRB7vuRl41e-85Z08dopXN5LbKr0=w1920-h886-rw style="width: 100%">
+          <span id=famous-pigeon-name> Liza "Famous Pigeon" V.G </span>
+    </p>     
+    <p style="float: left; font-size: 9pt; text-align: center; width: 23%; margin-right: 1%; margin-bottom: 0.5em;">
+          <img id=delightful-seahorse-headshot src=https://lh3.googleusercontent.com/gUG9hiiVY8xDSSAD0tx-cfCgJzM685u6OJrWCv05sOBj3gtntRBXQsETdQXNP5hg3JHTW_k9kwAu9p4=w1366-h589 style="width: 100%">
+          <span id=delightful-seahorse-name> Dhruti "Delightful Seahorse" D. </span>
+    </p> 
+    <p style="float: left; font-size: 9pt; text-align: center; width: 23%; margin-right: 1%; margin-bottom: 0.5em;">
+          <img id=funny-caribou-headshot src=https://lh3.googleusercontent.com/2dVoN8qUeoMARCImlTPQABZ-AYEbxQxMDP8DfRFsJc1Hy_l68Xs9Z8qblJp2xvmDkRNRLP7Gv8y3C0Q=w1366-h589 style="width: 100%">
+          <span id=funny-caribou-name> Andre "Funny Caribout" M. </span>
+    </p> 
+      
 {% endblock %}
