Fixed formatting issue in About page footer

--- a/views/about.html
+++ b/views/about.html
@@ -18,5 +18,6 @@
           <img id=funny-caribou-headshot src=https://lh3.googleusercontent.com/2dVoN8qUeoMARCImlTPQABZ-AYEbxQxMDP8DfRFsJc1Hy_l68Xs9Z8qblJp2xvmDkRNRLP7Gv8y3C0Q=w1366-h589 style="width: 100%">
           <span id=funny-caribou-name> Andre "Funny Caribout" M. </span>
     </p> 
+    <p><br>Thanks for checking out our site!</p>
       
 {% endblock %}
