--- a/views/create-event.html
+++ b/views/create-event.html
@@ -5,9 +5,9 @@
  	<form id="create-event" method="POST">
  	  
   {% if errors %}
-    <div class="form-errors">
+    <div>
       <p>Please correct the following errors!</p>
-      <ul>
+      <ul class="form-errors">
         {% for error in errors %}
           <li>{{error}}</li>
         {% endfor %}
