change header and footer formatting

--- a/views/layout.html
+++ b/views/layout.html
@@ -9,7 +9,8 @@
 	<body class="container">
 
     {% block header %}
-      <header>Hey, I'm in the header</header>
+      <header> <strong> The MDLA* (<i>AKA epic-wrath</i>) Website </strong> </header>
+      <hr width=100% size='10px'>
     {% endblock %}
 
     {% block mainContent %}
@@ -19,6 +20,7 @@
     {% block footer %}
       <footer>
       <a href="/">Home</a> &gt; <a href="/about">About Us</a>
+      <hr width=100%>
        <img src="https://media.licdn.com/media/AAEAAQAAAAAAAAZTAAAAJGQ4ODNjMGRkLWM1MjgtNDNjZS1iNmI1LWQ1YjdlNjBlOTUzZg.png" id="logo"></img>
       </footer>
     {% endblock %}
